# CS2-Yasmine-Calculator

./: CMakeLists.txt  README.md  calculator.cpp  calculator.h  test.cpp
mybuild/: CMakeCache.txt  Makefile  cmake_install.cmake
